Fix visual bug on small screens

--- a/src/app/champion-selector/app-champion-selector/app-champion-selector.component.css
+++ b/src/app/champion-selector/app-champion-selector/app-champion-selector.component.css
@@ -6,7 +6,7 @@
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
-  width: 100%;
+  width: calc(100% - 40px);
 }
 
 #result {
